# jito-stake-pool-cli

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml
cli/: Cargo.toml  README.md
cli/src/: client.rs  config.rs  lib.rs  main.rs
cli/src/command/: add_validator.rs  create_pool.rs  decrease_validator_stake.rs  deposit_sol.rs  increase_validator_stake.rs  mod.rs  remove_validator.rs
sdk/: Cargo.toml
sdk/src/: address.rs  lib.rs
sdk/src/sdk/: add_validator.rs  increase_validator_stake.rs  mod.rs
