[workspace]
members = [
  "cli", "sdk",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bincode = "1.3.1"
borsh-legacy = { package = "borsh", version = "0.9" }
borsh = { version = "1.5.7", features = ["derive"] }
bytemuck = { version = "1.16.3", features = ["min_const_generics"] }
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "env"] }
clap-markdown = { version = "0.1.4" }
env_logger = "0.10.2"
fragmetric-cpi = "0.5.1"
jito-stake-pool-sdk = { path = "sdk" }
log = "0.4.22"
solana-account-decoder = "2.2.1"
solana-client = "2.2.1"
solana-cli-config = "2.2.1"
solana-program = "1.9.2"
solana-remote-wallet = "2.2.1"
solana-rpc-client = "2.2.1"
solana-rpc-client-api = "2.2.1"
solana-sdk = "2.2.1"
solana-stake-interface = "1.0.0"
solana-system-interface = "1.0.0"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
spl-stake-pool = { version = "2.0.1", features = ["no-entrypoint"] }
spl-stake-pool-legacy = { package = "spl-stake-pool", version = "0.6.4", features = ["no-entrypoint"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
toml = "0.8.22"

[profile.dev]
split-debuginfo = "unpacked"
