[package]
name = "jito-stake-pool-cli"
description = "SPL-Stake-Pool Command-line Utility"
license = "Apache-2.0"
version = "0.0.1"
edition = "2024"

[lib]
name = "jito_stake_pool_cli"
path = "src/lib.rs"

[[bin]]
name = "jito-stake-pool-cli"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
borsh-legacy = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
jito-stake-pool-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
solana-cli-config = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-remote-wallet = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-system-interface = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-stake-pool = { workspace = true }
spl-stake-pool-legacy = { workspace = true }
spl-token = { workspace = true }
