[package]
name = "jito-stake-pool-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh-legacy = { workspace = true }
solana-sdk = { workspace = true }
solana-stake-interface = { workspace = true }
solana-system-interface = { workspace = true }
spl-stake-pool = { workspace = true }
spl-stake-pool-legacy = { workspace = true }
